Use SequenceCollection methods