@@ -50,7 +50,7 @@ public class ConfigurationFactoryTest extends AbstractMapfishSpringTest {
 
     assertEquals(1, template.getProcessorGraph().getAllProcessors().size());
     assertEquals(1, template.getProcessorGraph().getRoots().size());
-    Processor processor = template.getProcessorGraph().getRoots().get(0).getProcessor();
+    Processor processor = template.getProcessorGraph().getRoots().getFirst().getProcessor();
     assertTrue(processor.toString(), processor instanceof ProcessorWithSpringInjection);
     ((ProcessorWithSpringInjection) processor).assertInjected();
   }
@@ -115,7 +115,7 @@ public class ConfigurationFactoryTest extends AbstractMapfishSpringTest {
 
     assertEquals(1, template.getProcessorGraph().getAllProcessors().size());
     assertEquals(1, template.getProcessorGraph().getRoots().size());
-    Processor processor = template.getProcessorGraph().getRoots().get(0).getProcessor();
+    Processor processor = template.getProcessorGraph().getRoots().getFirst().getProcessor();
     assertTrue(processor instanceof ProcessorWithConfigurationInjection);
     ((ProcessorWithConfigurationInjection) processor).assertInjected();
   }
