@@ -55,13 +55,14 @@ public class SetStyleProcessorTest extends AbstractMapfishSpringTest {
 
     final MapAttribute.MapAttributeValues map =
         values.getObject("map", MapAttribute.MapAttributeValues.class);
-    final AbstractFeatureSourceLayer layer = (AbstractFeatureSourceLayer) map.getLayers().get(0);
+    final AbstractFeatureSourceLayer layer =
+        (AbstractFeatureSourceLayer) map.getLayers().getFirst();
     final MapfishMapContext mapContext = AbstractMapfishSpringTest.createTestMapContext();
     assertEquals(
         "Default Line",
         layer
             .getLayers(httpClientFactory, mapContext, CONTEXT, null)
-            .get(0)
+            .getFirst()
             .getStyle()
             .getDescription()
             .getTitle()
@@ -79,7 +80,7 @@ public class SetStyleProcessorTest extends AbstractMapfishSpringTest {
     List<ProcessorGraphNode<?, ?>> roots = graph.getRoots();
 
     assertEquals(1, roots.size());
-    ProcessorGraphNode<?, ?> rootNode = roots.get(0);
+    ProcessorGraphNode<?, ?> rootNode = roots.getFirst();
     assertEquals(SetStyleProcessor.class, rootNode.getProcessor().getClass());
     assertEquals(2, rootNode.getAllProcessors().size());
   }
@@ -95,7 +96,7 @@ public class SetStyleProcessorTest extends AbstractMapfishSpringTest {
     List<ProcessorGraphNode<?, ?>> roots = graph.getRoots();
 
     assertEquals(2, roots.size());
-    ProcessorGraphNode<?, ?> rootNode1 = roots.get(0);
+    ProcessorGraphNode<?, ?> rootNode1 = roots.getFirst();
     assertEquals(SetStyleProcessor.class, rootNode1.getProcessor().getClass());
     assertEquals(2, rootNode1.getAllProcessors().size());
 
