@@ -66,6 +66,6 @@ public class CreateMapProcessorCenterGeoJsonZoomToExtentMinScaleTest
     assertEquals(1, layerGraphics.size());
 
     new ImageSimilarity(getFile(BASE_DIR + "expectedSimpleImage.png"))
-        .assertSimilarity(layerGraphics.get(0), 500, 400, 0);
+        .assertSimilarity(layerGraphics.getFirst(), 500, 400, 0);
   }
 }
